# canvasxpress-connectors

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: make-screenshot.html
examples/: README.md  run_byo.py  run_sheets.py
examples/_tools/: capture_screenshots.py
examples/byo_database/: README.md  app.py  seed_demo.py
examples/google_sheets/: README.md  app.py
examples/postgres/: README.md  app.py  seed.py
examples/postgres/static/: index.html
examples/sqlite/: README.md  app.py  seed.py
examples/sqlite/static/: index.html
src/cx_connectors/: __init__.py  reshape.py  store.py
src/cx_connectors/sources/: __init__.py  base.py  google_sheets.py  sql.py
src/cx_connectors/web/: __init__.py  byo_app.py  sheets_app.py
src/cx_connectors/web/static/: index.html
src/cx_connectors/web/static_sheets/: index.html
tests/: test_reshape.py  test_sheets.py  test_store_and_sql.py
